# niu2x

./: .clang-format  CMakeLists.txt  Makefile  README.md  README.rst
app/nx/: CMakeLists.txt
cmake/: FindFFmpeg.cmake  FindOpenSSL.cmake  dependent_prebuilt.cmake  find_dependencies.cmake  warning_as_error.cmake
config/: build.h.in
dependencies/memory-allocators/: CMakeLists.txt
include/niu2x/: algorithm.h  assert.h  async.h  bitmap.h  crypto.h  errcode.h  exception.h  ffmpeg.h  freelist2.h  fs.h  gfh.h  gfx.h  gfx_utils.h  hashtab.h  io.h  limits.h  linmath.h  list.h  list_head.h  log.h  memory.h  niu2x.h  object.h  pipe.h  redblack.h  ref.h  ringbuf.h  test.h  type.h  utils.h  uuid.h
resource/: cubes.fbx
src/: assert.cpp  assert.h  bitmap.cpp  exception.cpp  exception.h  limits.cpp  list_head.cpp  log.cpp  niu2x.cpp  redblack.cpp  ringbuf.cpp  utils.h  uuid.cpp  uuid.h
src.old/: aio.cpp  aio.h  freelist.h  gfx.h  lexical_cast.h  ringbuffer.h  string_utils.h  utils.h
src.old/gfx/: gfx.cpp  internal.h
src.old/io/: buf.cpp  filter.cpp  openssl.cpp  std_stream_adapter.cpp
src.old/memory/: freelist_memory.cpp
src.old/memory-allocators/: SinglyLinkedList.h  SinglyLinkedListImpl.h
src.old/utils/: stoi.h  unused.h
src/algorithm/: binary_search.cpp
src/async/: event_loop.cpp  http.cpp  io_context.cpp  thread_group.cpp
src/crypto/: base64.cpp  chiper.cpp  cipher.cpp  common.h  digest.cpp  hex.cpp
src/embed_lua/: export_luabindings.lua  init.lua  utils.lua
src/examples/: CMakeLists.txt
src/examples/cvt/: main.cpp
src/examples/demo/: main.cpp
src/examples/luajit-compile/: main.cpp
src/examples/nx/: main.cpp
src/examples/tcp-client/: main.cpp
src/examples/zlib/: main.cpp
src/ffmpeg/: media.cpp  yuv_rgb.c  yuv_rgb.h
src/io/: filter.cpp  io.h  pipe.cpp  source.cpp  stream_adapter.cpp
src/memory/: freelist_memory.cpp  mallocfree_memory.cpp
src/memory-allocators/: DoublyLinkedListImpl.h  FreeListAllocator.cpp
src/niu2x/: CMakeLists.txt  aio.cpp  aio.h  allocator.cpp  allocator.h  assert.h  async_io.cpp  async_io.h  codec.h  cvt.cpp  cvt.h  encrypt_utils.h  exception.h  freelist.h  gfx.h  global.cpp  global.h  hashtab.cpp  hashtab.h  io.cpp  io.h  limits.h  list_head.cpp  list_head.h  log.cpp  log.h  lua_engine.cpp  lua_engine.h  math.cpp  memory.cpp  memory.h  niu2x.cpp  obj_pool.h  pp.h  ringbuffer.h  string_utils.cpp  string_utils.h  test.cpp  utils.cpp  utils.h
src/niu2x/encrypt_utils/: zlib.cpp
src/niu2x/fs/: read_file.cpp
src/niu2x/gfh/: app.cpp  camera.cpp  game_app.cpp  game_object.cpp  gfh.h  object.cpp  setup_cleanup.cpp  transform.cpp  world.cpp
src/niu2x/gfx/: draw_texture.cpp  draw_utils.cpp  font.cpp  gfx.cpp  gfx.h  mat4x4.cpp  mem.cpp  mesh.cpp  noto_scans_sc_regular.h  object.cpp  object_helper.cpp  printf.cpp  render.cpp  setup_cleanup.cpp  window.cpp
src/niu2x/gfx/font/: edtaa3func.cpp  edtaa3func.h
src/niu2x/gfx/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
src/niu2x/gfx/scene/: node_t.cpp  node_t.h
src/niu2x/gfx/stb/: stb_image.h  stb_rect_pack.h
src/niu2x/gfx_utils/: plane.cpp
src/niu2x/hardcode/: lua_export_luabindings.cpp  lua_export_luabindings.h  lua_init.cpp  lua_init.h  lua_utils.cpp  lua_utils.h  utils.bin.cpp.cpp  utils.bin.cpp.h
src/niu2x/io/: buf.cpp  filter.cpp  io.cpp  io.h  mem.cpp  openssl.cpp  pipe.cpp  sink.cpp  std_stream_adapter.cpp  stream_adapter.cpp  zlib.cpp
src/niu2x/io/filter/: base64.cpp  cipher.cpp  digest.cpp  filter.cpp  zlib.cpp
src/niu2x/lua_bindings/: aio.cpp  aio.h  aio.pkg  cvt.cpp  cvt.h  cvt.pkg  openlib.h  openlib_all.cpp  openlib_log.cpp  tolua_aio.cpp  tolua_aio.h  tolua_cvt.cpp  tolua_cvt.h  tolua_cvt.pkg  tolua_fix.cpp  tolua_fix.h
src/niu2x/memory/: freelist_memory.cpp  mallocfree_memory.cpp  memory.cpp
src/niu2x/memory-allocators/: Allocator.h  Benchmark.cpp  Benchmark.h  CAllocator.cpp  CAllocator.h  DoublyLinkedList.h  DoublyLinkedListImpl.h  FreeListAllocator.cpp  FreeListAllocator.h  IO.h  LinearAllocator.cpp  LinearAllocator.h  PoolAllocator.cpp  PoolAllocator.h  SinglyLinkedList.h  SinglyLinkedListImpl.h  StackAllocator.cpp  StackAllocator.h  StackLinkedList.h  StackLinkedListImpl.h  Utils.h
src/niu2x/misc/: constexpr.h  cxxopts.h  freelist.cpp  freelist.h  net_utils.cpp  net_utils.h  noncopyable.h  ringbuffer.h  rw_status.h  string_utils.cpp
src/niu2x/os/: os_linux.h
src/niu2x/pipe/: mem.cpp  pipe.cpp  pipe.h  sink.cpp  source.cpp
src/niu2x/pipe/filter/: base64.cpp  cipher.cpp  cut.cpp  digest.cpp  filter.cpp  hex.cpp  simple_filter.cpp  zlib.cpp
src/niu2x/pp/: greater_equal.h
src/niu2x/tolua/: tolua_is.c  tolua_map.c  tolua_to.c
src/niu2x/utils/: assert.h  exception.h  limits.h  literals.h  misc.h  noncopyable.h  status.h
src/niu2x_lua/: CMakeLists.txt  bindings.h  lua_engine.cpp  lua_engine.h  lua_utils.cpp  lua_utils.h  tolua_fix.cpp  tolua_fix.h
src/niu2x_lua/auto_bindings/: aio.pkg  pipe.pkg  tolua_aio.cpp  tolua_aio.h  tolua_pipe.cpp  tolua_pipe.h
src/niu2x_lua/bindings/: aio.cpp  aio.h  log.cpp  pipe.cpp  pipe.h
src/niu2x_lua/embed_lua/: utils.lua  wrap.lua  wrap_pipe.lua
src/niu2x_lua/hardcode/: lua_init.cpp  lua_init.h  lua_utils.cpp  lua_utils.h  lua_wrap.cpp  lua_wrap.h  lua_wrap_pipe.cpp  lua_wrap_pipe.h
src/niu2x_lua/lua_bindings/: openlib.h  tolua_aio.h
src/niu2x_lua/tolua/: tolua++.h  tolua_event.c  tolua_is.c  tolua_map.c  tolua_to.c
test/: CMakeLists.txt  algorithm-test.cpp  async-test.cpp  base64.cpp  bitmap-test.cpp  crypto-test.cpp  decrypt.cpp  digest.cpp  display.cpp  display_model.cpp  empty_window.cpp  encrypt.cpp  event_loop-test.cpp  ffmpeg-test.cpp  font.cpp  io.cpp  mat4x4.cpp  misc-test.cpp  mu-wan-qing.cpp  mu-wan-qing.h  nx.cpp  rb-test.cpp  shadow_map.cpp  stencil.cpp  test-io.sh  test.cpp  unbase64.cpp  unzlib.cpp  utils-test.cpp  zlib.cpp
tests/: CMakeLists.txt  test-digest.cpp
tools/: hardcode-embed-lua.sh  hardcode-lua.sh  hardcode.sh  luajit-compile  pp.py  tolua.sh
(+74 files in other folders)
