function(build_application name)
	add_executable(${name} "")
	file(GLOB_RECURSE sources PATTERN "${name}/*.cpp")
	target_sources(${name} PRIVATE ${sources})
	target_link_libraries(${name} PRIVATE niu2x)
	target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
endfunction()

build_application(demo)
build_application(cvt)
build_application(nx)
